package backend.coinwise.enums;

public enum instituicao {
    PUCMINAS
    
}
